# bitcoin_tax

./: .gitattributes  .gitignore  CLAUDE.md  CONTINUITY.md  Cargo.toml  FOLLOWUPS.md  LIMITATIONS.md  Makefile  NOTICE  README.md  STANDARD_WORKFLOW.md  cycle-prep-recon-tui-edit-hardening.md  cycle-prep-recon-whatif-sell-btc-input-tui-parser-dedup.md  deny.toml
crates/btctax/: Cargo.toml
crates/btctax-adapters/: Cargo.toml
crates/btctax-adapters/data/: BitcoinPricesDaily.NOTICE  btc_usd_daily_close.csv
crates/btctax-adapters/src/: adapter.rs  ingest.rs  lib.rs  normalize.rs  parse.rs  price.rs  read.rs  tax_tables.rs
crates/btctax-adapters/src/sources/: coinbase.rs  gemini.rs  mod.rs  river.rs  swan.rs
crates/btctax-adapters/tests/: coinbase.rs  fmv_fr3.rs  gemini.rs  integration.rs  kat_rate_engine.rs  river.rs  swan.rs
crates/btctax-cli/: Cargo.toml  LIMITATIONS.md
crates/btctax-cli/src/: bulk_estimated.rs  cli.rs  config.rs  donation_details.rs  eventref.rs  input_form_store.rs  lib.rs  main.rs  optimize_attest.rs  price_cache.rs  render.rs  resolve.rs  return_inputs.rs  session.rs  tax_profile.rs  testonly.rs
crates/btctax-cli/src/chokepoint/: mod.rs
crates/btctax-cli/src/cmd/: admin.rs  answer.rs  import.rs  init.rs  inspect.rs  mod.rs  optimize.rs  promote.rs  reconcile.rs  tax.rs  tranche.rs  whatif.rs
crates/btctax-cli/tests/: basis_methodology_export.rs  btctax_now_seam.rs  chokepoint_declare.rs  chokepoint_parity.rs  chokepoint_promote.rs  classify_inbound_self_transfer_cli.rs  config_dispatch.rs  declare_tranche_cli.rs  end_to_end.rs  events_list.rs  export.rs  export_irs_pdf.rs  fixtures.rs  fr9_exit_code.rs  fullreturn_oracle.rs  help_units.rs  init_import.rs  io_error_context.rs  limitations.rs  match_self_transfers_cli.rs  optimize_accept.rs  optimize_consult.rs  optimize_run.rs  promote_cli.rs  pseudo_reconcile_cli.rs  reclassify_income_cli.rs  reconcile.rs  record_time_validation.rs  repo_hygiene.rs  report_exit_code.rs  tax_profile.rs  tax_report.rs  value_guard_wiring.rs  verify_report.rs  whatif_harvest.rs  whatif_sell.rs
crates/btctax-core/: Cargo.toml
crates/btctax-core/src/: conservative.rs  conservative_promote.rs  conventions.rs  donation.rs  event.rs  forms.rs  identity.rs  lib.rs  optimize.rs  persistence.rs  price.rs  state.rs  tranche_guard.rs  void.rs  whatif.rs
crates/btctax-core/src/defensive/: discovery.rs  era.rs  mod.rs
crates/btctax-core/src/project/: compliance.rs  conservation.rs  evaluate.rs  fold.rs  mod.rs  pools.rs  resolve.rs  transition.rs
crates/btctax-core/src/tax/: advisories.rs  amt.rs  charitable.rs  classifier.rs  compute.rs  form8275.rs  frozen_guard.rs  method.rs  mod.rs  oracle_diff.rs  other_taxes.rs  packet.rs  printed.rs  qbi.rs  questions.rs  return_1040.rs  return_inputs.rs  return_refuse.rs  se.rs  tables.rs  testonly.rs  types.rs
crates/btctax-core/tests/: compliance.rs  corrections.rs  decision_bad_target.rs  defensive_discovery.rs  defensive_era.rs  defensive_journey.rs  determinism.rs  evaluate.rs  golden_returns.rs  harvest.rs  kat_conservative.rs  kat_forms.rs  kat_promote.rs  kat_tax.rs  kat_tranche.rs  lot_selection.rs  method_election.rs  method_election_scoped.rs  optimize_compliance.rs  optimize_mode1.rs  optimize_mode2.rs  optimize_score.rs  optimize_wash_sale.rs  persistence.rs  properties.rs  pseudo_reconcile.rs  reclassify_income.rs  safe_harbor_method.rs  tax_compute.rs  transition.rs  voidable.rs  whatif.rs
crates/btctax-core/tests/goldens/: full_return_goldens.json
crates/btctax-forms/: Cargo.toml
crates/btctax-forms/forms/2017/: f1040.map.toml  f8283.map.toml  f8949.map.toml  schedule_d.map.toml  schedule_se.map.toml
crates/btctax-forms/forms/2024/: f1040.map.toml  f1040s1.map.toml  f1040s2.map.toml  f1040s3.map.toml  f1040sa.map.toml  f1040sb.map.toml  f1040sc.map.toml  f8275.map.toml  f8283.map.toml  f8949.map.toml  f8959.map.toml  f8960.map.toml  f8995.map.toml  schedule_d.map.toml  schedule_se.map.toml
crates/btctax-forms/forms/2025/: f1040.map.toml  f8283.map.toml  f8949.map.toml  schedule_d.map.toml  schedule_se.map.toml
crates/btctax-forms/src/: cells.rs  error.rs  fill8949.rs  fill8949_full.rs  form1040.rs  form1040_full.rs  form8275.rs  form8283.rs  form8959.rs  form8960.rs  form8995.rs  lib.rs  map.rs  overflow.rs  packet.rs  pdf.rs  schedule23.rs  schedule_a.rs  schedule_b.rs  schedule_c.rs  schedule_d.rs  schedule_d_full.rs  schedule_se.rs  schedule_se_full.rs  transcribe.rs  verify.rs  watermark.rs
crates/btctax-forms/tests/: census.rs  extract_lines.rs  full_return_forms.rs  golden_packet.rs  kats.rs  oracle_sweep_readback.rs  overflow.rs  sp2.rs  sp3.rs  sp3b.rs  sp4.rs
crates/btctax-forms/tests/common/: mod.rs
crates/btctax-input-form/: Cargo.toml
crates/btctax-input-form/src/: apply.rs  attribute.rs  lib.rs  parse.rs  seam.rs
crates/btctax-input-form/src/spec/: coverage.rs  mod.rs  registries.rs  sections.rs
crates/btctax-oracle-harness/: Cargo.toml
crates/btctax-oracle-harness/src/: main.rs
crates/btctax-oracle-harness/tests/: smoke.rs
crates/btctax-store/: Cargo.toml
crates/btctax-store/src/: atomic.rs  blob.rs  crypto.rs  fsperms.rs  lib.rs  lock.rs  memlock.rs  paths.rs  sqlite_io.rs  vault.rs
crates/btctax-store/tests/: integration.rs  smoke.rs
crates/btctax-tui/: Cargo.toml
crates/btctax-tui-edit/: Cargo.toml
crates/btctax-tui-edit/src/: defensive_dashboard.rs  draw_edit.rs  editor.rs  main.rs
crates/btctax-tui-edit/src/edit/: declare_flow.rs  form.rs  mod.rs  persist.rs  promote_flow.rs  tax_inputs.rs
crates/btctax-tui-edit/tests/: btctax_now_seam.rs
crates/btctax-tui/src/: app.rs  capture.rs  clock.rs  draw.rs  export.rs  lib.rs  main.rs  sort.rs  unlock.rs  whatif_panel.rs
crates/btctax-tui/tests/: btctax_now_seam.rs
crates/btctax-update-prices/: Cargo.toml
crates/btctax-update-prices/src/: lib.rs  main.rs
crates/btctax/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/corpora/: j1_coinbase.csv
crates/xtask/src/: check_isolation.rs  docs.rs  dump_fields.rs  examples.rs  main.rs
(+752 files in other folders)
