[workspace]
resolver = "2"
members = ["crates/btctax", "crates/btctax-store", "crates/btctax-core", "crates/btctax-adapters", "crates/btctax-cli", "crates/btctax-forms", "crates/btctax-tui", "crates/btctax-tui-edit", "crates/btctax-update-prices", "crates/xtask"]
[workspace.package]
edition = "2021"
license = "MIT OR Unlicense"
rust-version = "1.88"
repository = "https://github.com/bg002h/bitcoin_tax"
homepage = "https://github.com/bg002h/bitcoin_tax"
keywords = ["bitcoin", "tax", "cryptocurrency", "accounting", "ledger"]
