[package]
name = "btctax-adapters"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Exchange-CSV/XLSX parsers and bundled price data for the btctax Bitcoin tax ledger."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["finance"]

[dependencies]
btctax-core = { path = "../btctax-core", version = "0.2.0" }
# Exact decimal money (NFR5); same pin as core. serde-str unused here but keeps the feature set aligned.
rust_decimal = { version = "1.36", default-features = false, features = ["std"] }
rust_decimal_macros = "1.36"             # dec! macro — used in production code for bundled TY2025 table (tax_tables.rs)
# Timestamp parse → OffsetDateTime + UtcOffset (§6.1).
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
csv = "1.3"            # RFC4180 reader; Coinbase/River CSV; CRLF + preamble handling
calamine = "0.26"      # read-only XLSX reader (Gemini ledger; any .xlsx source)
thiserror = "1"

[dev-dependencies]
# rust_decimal_macros is NOT listed here — dev code inherits the production dep (already in
# [dependencies] above). The redundant dev-dep entry was removed (B-Nit burndown-2).
rust_xlsxwriter = "0.79"   # build SYNTHETIC .xlsx fixtures in-test (writes invented data only)
tempfile = "3"
