[package]
name = "btctax-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true   # M3: enforce the workspace MSRV (1.74) like the other 3 crates

[lib]
name = "btctax_cli"
path = "src/lib.rs"

[[bin]]
name = "btctax"
path = "src/main.rs"

[dependencies]
btctax-core = { path = "../btctax-core" }
btctax-store = { path = "../btctax-store" }
btctax-adapters = { path = "../btctax-adapters" }
rust_decimal = { version = "1.36", default-features = false, features = ["std"] }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
rusqlite = { version = "0.31", features = ["bundled"] } # cli_config side-table over the vault Connection
clap = { version = "4.5", features = ["derive"] }       # binary arg parsing (derive)
rpassword = "7.3"                                        # secure interactive passphrase (main only)
csv = "1.3"                                              # FR10 ledger CSV export
serde_json = "1"                                         # classify-raw typed-payload input
thiserror = "1"

[dev-dependencies]
tempfile = "3"
rust_decimal_macros = "1.36"
time = { version = "0.3", features = ["macros"] }
