[package]
name = "btctax-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sequoia-openpgp = { version = "1.21", default-features = false, features = ["crypto-nettle"] }
rusqlite = { version = "0.31", features = ["bundled", "serialize"] }
rustix = { version = "0.38", features = ["fs", "mm"] }
zeroize = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
