[package]
name = "btctax-tui-edit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "btctax-tui-edit"
path = "src/main.rs"

[dependencies]
btctax-tui      = { path = "../btctax-tui" }
btctax-cli      = { path = "../btctax-cli" }
btctax-core     = { path = "../btctax-core" }
btctax-store    = { path = "../btctax-store" }
btctax-adapters = { path = "../btctax-adapters" }
# [R0-M1] Explicit pinned versions — NO [workspace.dependencies] table exists.
ratatui      = "0.29"
crossterm    = "0.28"
rust_decimal = "1"
time         = "0.3"

[dev-dependencies]
tempfile            = "3"
rust_decimal_macros = "1"
serde_json          = "1"
