[package]
name = "btctax-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "btctax-tui"
path = "src/main.rs"

[dependencies]
btctax-cli      = { path = "../btctax-cli" }
btctax-store    = { path = "../btctax-store" }
btctax-core     = { path = "../btctax-core" }
btctax-adapters = { path = "../btctax-adapters" }
# [R0-M1] Explicit pinned versions — NO [workspace.dependencies] table exists.
ratatui   = "0.29"
crossterm = "0.28"
# Match the workspace-shared versions used in btctax-core / btctax-cli.
thiserror    = "1"
rust_decimal = "1"

[dev-dependencies]
tempfile = "3"
time = "0.3"
