[package]
name = "btctax-tui"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Read-only terminal viewer for the btctax Bitcoin tax ledger (holdings, disposals, income, forms)."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "finance"]

[lib]
name = "btctax_tui"
path = "src/lib.rs"

[[bin]]
name = "btctax-tui"
path = "src/main.rs"

[dependencies]
btctax-cli      = { path = "../btctax-cli", version = "0.8.0" }
btctax-store    = { path = "../btctax-store", version = "0.8.0" }
btctax-core     = { path = "../btctax-core", version = "0.8.0" }
btctax-adapters = { path = "../btctax-adapters", version = "0.8.0" }
# [R0-M1] Explicit pinned versions — NO [workspace.dependencies] table exists.
ratatui   = "0.29"
crossterm = "0.28"
# Match the workspace-shared versions used in btctax-core / btctax-cli.
thiserror    = "1"
rust_decimal = "1"
# [R0-M1] Promoted from [dev-dependencies]: production use in ExportConfirmState + e keybinding.
time = "0.3"

[dev-dependencies]
tempfile = "3"
